<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_radio_button_unchecked"
            android:title="@string/schedule_trail_class" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_baseline_radio_button_unchecked"
            android:title="@string/upcoming_classes" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_baseline_radio_button_unchecked"
            android:title="@string/past_classes" />
        <item
            android:id="@+id/nav_practice"
            android:icon="@drawable/ic_baseline_radio_button_unchecked"
            android:title="@string/praoctice" />
        <item
            android:id="@+id/nav_explore"
            android:icon="@drawable/ic_baseline_radio_button_unchecked"
            android:title="@string/explore" />
        <item
            android:id="@+id/price"
            android:icon="@drawable/ic_baseline_radio_button_unchecked"
            android:title="@string/pricing" />
        <item
            android:id="@+id/nav_blog"
            android:icon="@drawable/ic_baseline_radio_button_unchecked"
            android:title="@string/blog" />
        <item
            android:id="@+id/nav_faq"
            android:icon="@drawable/ic_baseline_radio_button_unchecked"
            android:title="@string/faqs" />
    </group>
</menu>