<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.swiflearn.ui.home.HomeFragment"
        android:label="@string/schedule_trail_class"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.swiflearn.ui.gallery.GalleryFragment"
        android:label="@string/upcoming_classes"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.swiflearn.ui.slideshow.PastClassFragment"
        android:label="@string/past_classes"
        tools:layout="@layout/fragment_slideshow" />
</navigation>